# computational_neuroscience

./: CMakeLists.txt  README.md  Setting up UG environment (Ubuntu).docx  compiling_D.sh  examples_E.sh  final_J.sh  install_lua_F.sh  neuro_box_plugins_G.sh  password_14ug.txt  profile_B.sh  rosado  rosado.pub  set_up_docker.sh  superlu_parmetis_I.sh  tetgen_H.sh  ug4_C.sh  ugHub_A.sh
